--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,6 @@ ul {
     color: #fa5959;
 }
 .site-head__logo-link-resp{
-      background-color: #242a45;                
       display: none;
 }
 
@@ -80,6 +79,9 @@ ul {
 @media screen and (max-width: 700px) {
     .site-head__logo-link-resp {
         display: block;
+        position: absolute;
+        top: 15%;
+        left: 10%;
 
     }
     .site-head__btn-closed{
@@ -87,7 +89,7 @@ ul {
         position: absolute;
         z-index: 100;
         top: 15%;
-        right: 15%   ;
+        right: 10%   ;
        border:none;
        background-color: transparent;
        cursor: pointer;
