--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ ul {
         display: block;
         position: relative;
         top: -6px;
+        left: -10px;
     }
 
     .site-head__nav-link {
