--- a/css/style.css
+++ b/css/style.css
@@ -289,10 +289,9 @@ border: 2px solid #5B6074;
         
     }
     .hero__background-image{
-        top: 180px ;
-        right: -50px;
-        width: 500px;
-        height: 250px;
+        top: 10%;
+        width: 70%;
+        /* height: 250px; */
     }
     .hero__inner{
         text-align: center;
